--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "vamparina-v1",
-  "version": "1.0.0",
-  "description": "Advanced Multi-Device WhatsApp Bot - VAMPARINA V1",
+  "version": "2.0.0",
+  "description": "VAMPARINA V1 - The Most Powerful Kenyan WhatsApp Bot",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Arnold Chirchir",
+  "author": "Arnold Chirchir (+254703110780)",
   "license": "MIT",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.7",
+    "@hapi/boom": "^10.0.1",
     "qrcode-terminal": "^0.12.0",
     "qrcode": "^1.5.3",
     "express": "^4.19.2",
@@ -18,6 +19,13 @@
     "fs-extra": "^11.2.0",
     "node-fetch": "^3.3.2",
     "dotenv": "^16.4.5",
+    "fluent-ffmpeg": "^2.1.3",
+    "ytdl-core": "^4.14.4",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0-rc.12",
+    "form-data": "^4.0.0",
+    "sharp": "^0.33.3",
+    "wa-sticker-formatter": "^4.5.5",
     "jimp": "^1.6.0"
   },
   "engines": {
