--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vamparina-v1",
-  "version": "2.0.0",
-  "description": "VAMPARINA V1 - The Most Powerful Kenyan WhatsApp Bot",
+  "version": "5.0.0",
+  "description": "VAMPARINA V1 - 500+ Commands | Kenya's #1 WhatsApp Bot",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -21,12 +21,15 @@
     "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
     "ytdl-core": "^4.14.4",
+    "yt-search": "^2.10.4",
     "axios": "^1.7.7",
-    "cheerio": "^1.0.0-rc.12",
     "form-data": "^4.0.0",
     "sharp": "^0.33.3",
     "wa-sticker-formatter": "^4.5.5",
-    "jimp": "^1.6.0"
+    "jimp": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "link-preview-js": "^3.0.5",
+    "moment-timezone": "^0.5.45"
   },
   "engines": {
     "node": ">=20.0.0"
