--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "vamparina-v1",
-  "version": "5.0.0",
-  "description": "VAMPARINA V1 - 500+ Commands | Kenya's #1 WhatsApp Bot",
-  "main": "index.js",
+  "name": "vamparina-v1-godmode",
+  "version": "10.0.0",
   "type": "module",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "author": "Arnold Chirchir (+254703110780)",
-  "license": "MIT",
+  "main": "index.js",
+  "scripts": { "start": "node index.js" },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.7",
-    "@hapi/boom": "^10.0.1",
     "qrcode-terminal": "^0.12.0",
     "qrcode": "^1.5.3",
     "express": "^4.19.2",
@@ -19,19 +13,9 @@
     "fs-extra": "^11.2.0",
     "node-fetch": "^3.3.2",
     "dotenv": "^16.4.5",
-    "fluent-ffmpeg": "^2.1.3",
     "ytdl-core": "^4.14.4",
     "yt-search": "^2.10.4",
-    "axios": "^1.7.7",
-    "form-data": "^4.0.0",
-    "sharp": "^0.33.3",
-    "wa-sticker-formatter": "^4.5.5",
-    "jimp": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "link-preview-js": "^3.0.5",
-    "moment-timezone": "^0.5.45"
+    "wa-sticker-formatter": "^4.5.5"
   },
-  "engines": {
-    "node": ">=20.0.0"
-  }
+  "engines": { "node": ">=20.0.0" }
 }
